[package]
name = "dfl"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for managing your dotfiles with Git."
authors = ["Aashish Thapa aashishthapa520@gmail.com"]
license = "MIT"
repository = "https://github.com/aashish-thapa/dfl"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "dfl"]
exclude = [".gitignore", ".github"]

[dependencies]
duct = "0.13.6"
dirs = "5.0.1"